# lib

./: High-Intensity Radiated Field Battery Data Set  README.md  UK-DALE dataset _File1  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst  license.rst  release.rst  tutorial.rst
src/data/: suggestions.csv
src/machine_data_hub/: cli.py
src/phm_data_hub/: cli.py  datasets.csv
tests/: test_cli.py
