[tool.poetry]
name = "phm-data-hub"
version = "0.1.0"
description = "Python-based Command Line Tool to use the PHM Data Hub"
authors = ["ceciliabarnes <cbarnes7@uw.edu>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
phm = "phm_data_hub.cli:main"